.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:17:28 **** Incremental Build of configuration Debug for project arrayImplementation ****
make all 
Building file: ../src/main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c:27:10: error: conflicting types for 'fetchArrayFromUser'
   27 | int32_t* fetchArrayFromUser(void){
      |          ^
../src/main.c:13:9: note: previous declaration is here
   13 | int32_t fetchArrayFromUser(void);
      |         ^
../src/main.c:50:30: error: incompatible pointer to integer conversion initializing 'int32_t' (aka 'int') with an expression of type 'int32_t (*)[n1]' (aka 'int (*)[n1]') [-Wint-conversion]
   50 |         int32_t returnedArray[2] = {&array1, &array2};
      |                                     ^~~~~~~
../src/main.c:50:39: error: incompatible pointer to integer conversion initializing 'int32_t' (aka 'int') with an expression of type 'int32_t (*)[n2]' (aka 'int (*)[n2]') [-Wint-conversion]
   50 |         int32_t returnedArray[2] = {&array1, &array2};
      |                                              ^~~~~~~
../src/main.c:52:9: warning: address of stack memory associated with local variable 'returnedArray' returned [-Wreturn-stack-address]
   52 |         return returnedArray;
      |                ^~~~~~~~~~~~~
1 warning and 3 errors generated.
make: *** [src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
